# copilot-audit

./: .geminiignore  .gitignore  GEMINI.md  README.md  USER_GUIDE.md  docker-compose.local.yml  docker-compose.yml  gluing-project-contents.sh  mcp.json  memory.jsonl  nginx.conf  package-lock.json
.gemini/: Dockerfile.sandbox  settings.json
.github/: copilot-instructions.md
app_api_for_test/: app_api.py
backend/: .coverage  .dockerignore  .env.example  .env.local.example  Dockerfile  Dockerfile.runner  README.md  pyproject.toml  testops.db
backend/chroma_db/: chroma.sqlite3
backend/src/app/: main.py  tasks.py
backend/src/app/agents/: batch.py  graph.py  nodes.py  prompts.py
backend/src/app/agents/prompts/: analyst_system_prompt.yaml  coder_system_prompt.yaml  debugger_system_prompt.yaml  fixer_system_prompt.yaml  router_system_prompt.yaml
backend/src/app/api/: models.py
backend/src/app/api/endpoints/: analysis.py  chat.py  execution.py  generation.py  history.py  notifications.py
backend/src/app/api/endpoints/export/: gitlab.py
backend/src/app/core/: bootstrap.py  celery_app.py  config.py  database.py  redis.py
backend/src/app/data/: defects.json
backend/src/app/domain/: __init__.py  enums.py  models.py  state.py
backend/src/app/services/: deduplication.py  defects.py  executor.py  gitlab.py  history.py  llm_factory.py  memory.py  notification_service.py  scheduler.py  streaming_service.py  validator.py
backend/src/app/services/code_analysis/: schemas.py  service.py
backend/src/app/services/code_analysis/parsers/: java_ast.py  java_simple.py  js_ts.py  python.py
backend/src/app/services/parsers/: openapi.py
backend/src/app/services/storage/: service.py
backend/src/app/services/tools/: browser.py  codebase_navigator.py  linter.py  playwright_remote.py  static_analyzer.py  trace_inspector.py
backend/tests/: conftest.py
backend/tests/integration/: test_llm.py
backend/tests/unit/: test_agents.py  test_api.py  test_chat_plan_persistence.py  test_code_parser.py  test_git_security.py  test_js_parser.py  test_memory.py  test_services.py  test_swagger_parser.py  test_validator.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  polyfills.ts
frontend/src/entities/: store.ts
frontend/src/entities/slices/: chatSlice.ts  settingsSlice.ts  uiSlice.ts
frontend/src/pages/: Workspace.tsx
frontend/src/shared/api/: ChatStreamService.ts  client.ts
frontend/src/widgets/: ApprovalModal.tsx  DebugReportModal.tsx  Editor.tsx  ErrorSuggestionModal.tsx  HistoryList.tsx  SettingsModal.tsx  Sidebar.tsx  Terminal.tsx  Toast.tsx
presentation/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
presentation/components/: CodeBlock.tsx  SlideLayout.tsx  SlideRenderer.tsx
