[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AI Agent for Test Generation"
authors = ["Team NonSleepers"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.124.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
langchain = "^1.1.2"
langchain-openai = "^1.1.0"
langgraph = "^1.0.4"
pydantic-settings = "^2.1.0"
ruff = "^0.14.8"
pytest = "^8.3.4"
playwright = "^1.40.0"
pytest-playwright = "^0.7.2"
allure-pytest = "^2.13.2"
requests = "^2.31.0"
chromadb = "^1.3.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", "__pycache__", ".venv", ".mypy_cache"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
testpaths = ["tests"]
