[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AI Agent for Test Generation"
authors = ["Team NonSleepers"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.124.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langgraph = "^0.2.60"
langgraph-checkpoint-postgres = "^2.0.0"
pydantic-settings = "^2.1.0"
ruff = "^0.14.8"
pytest = "^8.3.4"
playwright = "^1.40.0"
pytest-playwright = "^0.7.2"
allure-pytest = "^2.13.2"
requests = "^2.31.0"
chromadb = "^1.3.5"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.0"}
python-multipart = "^0.0.7"
javalang = "^0.13.0"
docker = "^7.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- RUFF CONFIGURATION ---

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", "__pycache__", ".venv", ".mypy_cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src", "app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
testpaths = ["tests"]
